# production

./: .bashrc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
config/: variables.py
notebooks/: prod.ipynb
scripts/: entrypoint.sh
src/: app.py  evaluate.py  inference.py  pipline.py  preprocessing.py  train.py
tests/: curl_test  test_cash.json
