[project]
name = "production"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.3"
dependencies = [
    "black>=25.1.0",
    "flask>=3.1.1",
    "ipykernel>=6.29.5",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "pylint>=3.3.7",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.2",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
